--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-#  firebase_core: ^2.1.1
+  firebase_core: ^2.1.1
   firebase_crashlytics: ^3.3.7
 
 dev_dependencies:
