--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   json_annotation: ^4.8.1
   meta: ^1.9.1
   sanitize_filename: ^1.0.5
+  open_filex: ^4.3.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
