--- a/.github/workflows/github_actions_main.yml
+++ b/.github/workflows/github_actions_main.yml
@@ -9,6 +9,19 @@ jobs:
     # The name of the job
     name: example
     runs-on: ubuntu-latest
+#    steps:
+#      - name: Echo Folder Contents
+#        run: echo $(ls)
     steps:
-      - name: Echo Folder Contents
-        run: echo $(ls)
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '11'
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.7.7'
+      - run: flutter pub get
+      - run: flutter test
+      - run: flutter build apk
+      - run: flutter build appbundle
