--- a/.github/workflows/github_actions_main.yml
+++ b/.github/workflows/github_actions_main.yml
@@ -9,13 +9,11 @@ jobs:
     # The name of the job
     name: example
     runs-on: ubuntu-latest
-#    steps:
-#      - name: Echo Folder Contents
-#        run: echo $(ls)
     steps:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.7.7'
           channel: 'stable'
+          architecture: x64
       - run: flutter --version
