--- a/.github/workflows/github_actions_main.yml
+++ b/.github/workflows/github_actions_main.yml
@@ -18,5 +18,19 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.13.9'
+      - name: Decode Keystore
+        id: decode_keystore
+        uses: timheuer/base64-to-file@v1.2
+        with:
+          fileName: 'upload_keystore.jks'
+          fileDir: '/home/runner/work/video2audio/video2audio/app/keystore/'
+          encodedString: ${{ secrets.KEYSTORE }}
       - run: flutter pub get
-      - run: flutter build appbundle
+      - name: Build .aab
+        run: flutter build appbundle
+        env:
+          SIGNING_KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          SIGNING_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+          SIGNING_STORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+      - name: Echo Folder Contents
+        run: echo $(ls)
