--- a/.github/workflows/github_actions_main.yml
+++ b/.github/workflows/github_actions_main.yml
@@ -25,6 +25,8 @@ jobs:
           fileName: 'upload_keystore.jks'
           fileDir: '/home/runner/work/video2audio/video2audio/android/app/keystore/'
           encodedString: ${{ secrets.KEYSTORE }}
+      - name: Transfer folder
+        run: cd /home/runner/work/video2audio/video2audio/android/app/keystore/
       - name: Echo Folder Contents
         run: echo $(ls)
       #      - run: flutter pub get
