--- a/.github/workflows/github_actions_main.yml
+++ b/.github/workflows/github_actions_main.yml
@@ -25,8 +25,10 @@ jobs:
           fileName: 'upload_keystore.jks'
           fileDir: '/home/runner/work/video2audio/video2audio/android/app/keystore/'
           encodedString: ${{ secrets.KEYSTORE }}
-      - name: Echo Folder Contents
-        run: echo ls ${{ github.workspace }}
+      - name: 'Check File Existence'
+        uses: thebinaryfelix/check-file-existence-action@v1
+        with:
+          files: 'upload_keystore.jks, *.jks'
       #      - run: flutter pub get
       #      - name: Build .aab
       #        run: flutter build appbundle
