--- a/.github/workflows/github_actions_main.yml
+++ b/.github/workflows/github_actions_main.yml
@@ -28,7 +28,7 @@ jobs:
       - name: 'Check File Existence'
         uses: thebinaryfelix/check-file-existence-action@1.0.0
         with:
-          files: 'upload_keystore.jks, *.jks'
+          files: 'upload_keystore.jks'
       #      - run: flutter pub get
       #      - name: Build .aab
       #        run: flutter build appbundle
