--- a/.github/workflows/github_actions_main.yml
+++ b/.github/workflows/github_actions_main.yml
@@ -10,25 +10,27 @@ jobs:
     name: example
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v2
-        with:
-          distribution: 'zulu'
-          java-version: '11'
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.13.9'
-      - name: Decode Keystore
-        id: decode_keystore
-        uses: timheuer/base64-to-file@v1.2
-        with:
-          fileName: 'upload_keystore.jks'
-          fileDir: '/home/runner/work/video2audio/video2audio/android/app/keystore/'
-          encodedString: ${{ secrets.KEYSTORE }}
+#      - uses: actions/checkout@v3
+#      - uses: actions/setup-java@v2
+#        with:
+#          distribution: 'zulu'
+#          java-version: '11'
+#      - uses: subosito/flutter-action@v2
+#        with:
+#          flutter-version: '3.13.9'
+#      - name: Decode Keystore
+#        id: decode_keystore
+#        uses: timheuer/base64-to-file@v1.2
+#        with:
+#          fileName: 'upload_keystore.jks'
+#          fileDir: '/home/runner/work/video2audio/video2audio/android/app/keystore/'
+#          encodedString: ${{ secrets.KEYSTORE }}
+      - name: 'create text file'
+        run: echo "hello" > testing.txt
       - name: 'Check File Existence'
         uses: thebinaryfelix/check-file-existence-action@1.0.0
         with:
-          files: 'upload_keystore.jks'
+          files: 'testing.txt'
       #      - run: flutter pub get
       #      - name: Build .aab
       #        run: flutter build appbundle
