--- a/.github/workflows/github_actions_main.yml
+++ b/.github/workflows/github_actions_main.yml
@@ -26,11 +26,11 @@ jobs:
 #          fileDir: '/home/runner/work/video2audio/video2audio/android/app/keystore/'
 #          encodedString: ${{ secrets.KEYSTORE }}
       - name: 'create text file'
-        run: echo "hello" > testing.txt
+        run: echo "hello" > upload_keystore.jks
       - name: 'Check File Existence'
         uses: thebinaryfelix/check-file-existence-action@1.0.0
         with:
-          files: 'testing.txt'
+          files: 'upload_keystore.jks'
       #      - run: flutter pub get
       #      - name: Build .aab
       #        run: flutter build appbundle
