--- a/.github/workflows/github_actions_main.yml
+++ b/.github/workflows/github_actions_main.yml
@@ -22,13 +22,15 @@ jobs:
         id: decode_keystore
         uses: timheuer/base64-to-file@v1.2
         with:
-          fileName: 'upload_keystore.jks'
+          fileName: 'upload-keystore.jks'
           fileDir: '/home/runner/work/video2audio/video2audio/android/app/keystore/'
           encodedString: ${{ secrets.KEYSTORE }}
       - name: 'Check File Existence'
         uses: thebinaryfelix/check-file-existence-action@1.0.0
         with:
-          files: 'upload_keystore.jks'
+          files: 'upload-keystore.jks'
+      - name: 'Manual File Check'
+        run: echo -l /home/runner/work/video2audio/video2audio/android/app/keystore/upload-keystore.jks
       #      - run: flutter pub get
       #      - name: Build .aab
       #        run: flutter build appbundle
