--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,7 +69,7 @@ android {
         release {
             keyAlias keystoreProperties['keyAlias'] ? keystoreProperties['keyAlias'] : System.getenv("KEY_ALIAS")
             keyPassword keystoreProperties['keyPassword'] ? keystoreProperties['keyPassword'] : System.getenv("KEY_PASSWORD")
-            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : file("keystore/upload-keystore.jks")
+            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : file("upload-keystore.jks")
             storePassword keystoreProperties['storePassword'] ? keystoreProperties['storePassword'] : System.getenv("KEYSTORE_PASSWORD")
 
         }
@@ -79,7 +79,7 @@ android {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.release
+            signingConfig signingConfigs.debug
             ndk {
                 debugSymbolLevel 'SYMBOL_TABLE'
             }
