--- a/.github/workflows/github_actions_main.yml
+++ b/.github/workflows/github_actions_main.yml
@@ -28,7 +28,7 @@ jobs:
       - name: 'Check File Existence'
         uses: thebinaryfelix/check-file-existence-action@1.0.0
         with:
-          files: 'app-release.aab'
+          files: '/home/runner/work/video2audio/video2audio/build/app/outputs/bundle/release/app-release.aab'
 
 
 
