--- a/.github/workflows/github_actions_main.yml
+++ b/.github/workflows/github_actions_main.yml
@@ -29,29 +29,19 @@ jobs:
           alias: ${{ secrets.KEY_ALIAS }}
           keyStorePassword: ${{ secrets.KEYSTORE_PASSWORD }}
           keyPassword: ${{ secrets.KEY_PASSWORD }}
-      - name: Upload Signed App Bundle
+      - name: Upload Signed App Bundle to Artifacts
         uses: actions/upload-artifact@v3
         with:
           name: signed-app-bundle
           path: ${{steps.signed_aab.outputs.signedReleaseFile}}
-#      - name: Upload to Play Store (Internal Testing)
-#        uses: r0adkll/upload-google-play@v1.0.18
-#        with:
-#          serviceAccountJsonPlainText: ${{ secrets.ANDROID_SERVICE_ACCOUNT_JSON }}
-#          packageName: com.mangotechnologies.video_to_audio
-#          releaseFiles: ${{steps.signed_aab.outputs.signedReleaseFile}}
-#          mappingFile: ./build/app/outputs/mapping/release/mapping.txt
-#          track: internal
-
-
-
-
-      - name: 'Check File Existence'
-        uses: thebinaryfelix/check-file-existence-action@1.0.0
+      - name: Upload to Play Store (Internal Testing)
+        uses: r0adkll/upload-google-play@v1.0.18
         with:
-          files: '/home/runner/work/video2audio/video2audio/build/app/outputs/bundle/release/app-release.aab'
-
-
+          serviceAccountJsonPlainText: ${{ secrets.ANDROID_SERVICE_ACCOUNT_JSON }}
+          packageName: com.mangotechnologies.video_to_audio
+          releaseFiles: ${{steps.signed_aab.outputs.signedReleaseFile}}
+          mappingFile: ./build/app/outputs/mapping/release/mapping.txt
+          track: internal
 
 #      - run: flutter pub get
 #      - name: Build .aab
@@ -71,3 +61,7 @@ jobs:
 #        uses: thebinaryfelix/check-file-existence-action@1.0.0
 #        with:
 #          files: 'upload-keystore.jks'
+#      - name: 'Check File Existence'
+#        uses: thebinaryfelix/check-file-existence-action@1.0.0
+#        with:
+#          files: '/home/runner/work/video2audio/video2audio/build/app/outputs/bundle/release/app-release.aab'
