--- a/.github/workflows/github_actions_main.yml
+++ b/.github/workflows/github_actions_main.yml
@@ -41,6 +41,7 @@ jobs:
           packageName: com.mangotechnologies.video_to_audio
           releaseFiles: ${{steps.signed_aab.outputs.signedReleaseFile}}
           mappingFile: ./build/app/outputs/mapping/release/mapping.txt
+          changesNotSentForReview: false
           track: internal
 
 
