--- a/.github/workflows/github_actions_main.yml
+++ b/.github/workflows/github_actions_main.yml
@@ -34,20 +34,21 @@ jobs:
         with:
           name: signed-app-bundle
           path: ${{steps.signed_aab.outputs.signedReleaseFile}}
-      - name: Upload Debug Symbols
-        uses: actions/upload-artifact@v3
-        with:
-          name: debug-symbols
-          path: build/app/outputs/symbols
-#      - name: Upload to Play Store (Internal Testing)
-#        uses: r0adkll/upload-google-play@v1.0.18
+#      - name: Upload Debug Symbols
+#        uses: actions/upload-artifact@v3
 #        with:
-#          serviceAccountJsonPlainText: ${{ secrets.ANDROID_SERVICE_ACCOUNT_JSON }}
-#          packageName: com.mangotechnologies.video_to_audio
-#          releaseFiles: ${{steps.signed_aab.outputs.signedReleaseFile}}
-#          mappingFile: ./build/app/outputs/mapping/release/mapping.txt
-#          changesNotSentForReview: true
-#          track: internal
+#          name: debug-symbols
+#          path: build/app/outputs/symbols
+      - name: Upload to Play Store (Internal Testing)
+        uses: r0adkll/upload-google-play@v1.0.18
+        with:
+          serviceAccountJsonPlainText: ${{ secrets.ANDROID_SERVICE_ACCOUNT_JSON }}
+          packageName: com.mangotechnologies.video_to_audio
+          releaseFiles: ${{steps.signed_aab.outputs.signedReleaseFile}}
+          mappingFile: ./build/app/outputs/mapping/release/mapping.txt
+          debugSymbols: ./build/app/outputs/symbols
+          changesNotSentForReview: true
+          track: internal
 
 
 
