--- a/.github/workflows/github_actions_main.yml
+++ b/.github/workflows/github_actions_main.yml
@@ -46,11 +46,9 @@ jobs:
           packageName: com.mangotechnologies.video_to_audio
           releaseFiles: ${{steps.signed_aab.outputs.signedReleaseFile}}
           mappingFile: ./build/app/outputs/mapping/release/mapping.txt
-          debugSymbols: ./build/app/outputs/symbols/
+          debugSymbols: app/intermediates/merged_native_libs/release/out/lib
           changesNotSentForReview: true
-          track: internal
-
-
+          track: open
 
 #      - run: flutter pub get
 #      - name: Build .aab
