--- a/.github/workflows/github_actions_main.yml
+++ b/.github/workflows/github_actions_main.yml
@@ -47,7 +47,7 @@ jobs:
           releaseFiles: ${{steps.signed_aab.outputs.signedReleaseFile}}
           mappingFile: ./build/app/outputs/mapping/release/mapping.txt
           debugSymbols: app/intermediates/merged_native_libs/release/out/lib
-          changesNotSentForReview: true
+#          changesNotSentForReview: true
           track: beta
 
 #      - run: flutter pub get
