--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
 
   firebase_core: ^2.1.1
   firebase_crashlytics: ^3.3.7
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
 dev_dependencies:
   flutter_test:
@@ -79,7 +82,8 @@ flutter_icons:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  # Internalization
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
