--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -18,14 +18,14 @@ if (flutterRoot == null) {
 }
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
-if (flutterVersionCode == null) {
-    flutterVersionCode = '1'
-}
+//if (flutterVersionCode == null) {
+//    flutterVersionCode = '1'
+//}
 
 def flutterVersionName = localProperties.getProperty('flutter.versionName')
-if (flutterVersionName == null) {
-    flutterVersionName = '1.0'
-}
+//if (flutterVersionName == null) {
+//    flutterVersionName = '1.0'
+//}
 
 apply plugin: 'com.android.application'
 // START: FlutterFire Configuration
